# Chickie

./: .env  .gitignore  Diagrama_redux.dia  Makefile  app.py  asgi.py  contar_linhas.py  docker-compose.yml  infra.secrets.toml  init_database.py  install.sh  pyproject.toml  requirements.txt  roadmap.txt
backend/: .dockerignore  Makefile  README.md  app.cqrs.py  asgi.py  contar_linhas.py  file.txt  init_database.py  producer.py  pyproject.toml  qt.py  reset_schema.py  roadmap.txt  scheduler.py  test_cache.py  testeeeee.txt  total.txt  up.py  upload_image.py  worker.py
backend/config/: .secrets.infra.toml  .secrets.toml  __init__.py  redis.secrets.conf  settings.toml
backend/dockerfiles/: Dockerfile.dev  Dockerfile.prod  api.dockerfile
backend/migrations/: env.py
backend/migrations/versions/: 09a9e0a1222f_first_commit.py  0f6a541d514f_ingredientes.py  13d5ba0e66ea_itempedido_produto_nome_produto_desc.py  27e0cc575d2e_pedido_table.py  33202267e4dd_pedido_celular.py  3e0e766ffa0a_pedido_usuario_uuid.py  49666cd4c8c1_itenspedido_valor.py  75a89fb762a6_rmcolend_usuario_loja.py  a5f013d8db1c_first_commit.py  ab5de8565b6b_enderecosfks.py  c6c021195658_pedido_comentarios.py  cde8a33a8bcf_first_commit.py  f1f180aba84c_create_database.py
backend/requirements/: api.txt
backend/scripts/: contar_linhas.py  init_database.py  reset_schema.py  worker.py
backend/src/: __init__.py  worker.py
backend/src/dependencies/: __init__.py  connection_dependency.py  current_loja_dependency.py  oauth2_password_request_form_dependency.py  repository_dependecies.py  service_dependencies.py  token_dependency.py
backend/src/domain/: __init__.py
backend/src/event/: __init__.py  models.py
backend/src/exceptions/: __init__.py
backend/src/infra/: __init__.py
backend/src/misc/: __init__.py  paginate.py
backend/src/models/: __init__.py  funcionario.py  login.py  loja.py  metodo_de_pagamento.py  pagamento.py  pedido.py  produto.py  token.py  usuario.py
backend/src/qt/: __init__.py
backend/src/scheduler/: __init__.py  celerybeat_scheduler.py
backend/src/schemas/: __init__.py  avaliacao.py  avaliacao_de_produto.py  categoria.py  cliente.py  endereco.py  entregador.py  feedback.py  funcionario.py  imagem_cadastro.py  item_pedido.py  login.py  loja.py  metodo_de_pagamento.py  pagamento.py  pedido.py  preco.py  produto.py  signin.py  signup.py  status.py  token.py  usuario.py  zona_de_entrega.py
backend/src/services/: __init__.py  dropbox_service.py  email_service.py  image_upload_service.py  produto_service.py  rmq_service.py
backend/src/tasks/: __init__.py  command_handler.py  main.py
backend/src/use_cases/: __init__.py  lojas.py  usuarios.py
backend/tests/: _rx.py  _test_produtos.py  _test_upload_image.py  conftest.py  test_categoria.py  test_command_handler.py  test_loja.py  test_status.py  test_upload_image.py
qt/: .gitignore  Makefile  app.py  auth.json  bt.py  dev.sh  entry.desktop  icon.png~  icon.py  pyproject.toml  setup.py
qt/controllers/: base.py  login.py  main.py
qt/domain/models/: __init__.py  auth.py  cliente.py  funcionario.py  item_pedido.py  loja.py  pedido.py  produto.py  status.py  usuario.py  zona_de_entrega.py
qt/domain/services/: __init__.py  auth.py  base.py  categoria.py  pedido.py  preco.py  produto.py  status.py
qt/models/: categorias.py  ingredientes.py  precos.py  produtos.py  status.py  uf.py
qt/scripts/: lines.py
qt/services/: __init__.py  file_service.py
qt/src/: __init__.py
qt/src/components/: __init__.py  custom_table_widget_item.py  ingrediente_container.py  ingrediente_group.py
qt/src/config/: __init__.py  settings.toml
qt/src/controllers/: __init__.py  base.py  historico.py  login.py  main.py  pedidos.py  pedidos_refresh_worker.py
qt/src/custom_widgets/: __init__.py  ingrediente_group_template_ui.py  ingrediente_group_ui.py
qt/src/domain/: __init__.py
qt/src/helpers/: __init__.py
qt/src/services/: __init__.py  cache_service.py  file_service.py
qt/src/styles/: all.qss  ingrediente.qss  main-window.qss  main.qss
qt/src/ui_models/: __init__.py  base_pedidos_model.py  categoria_list_model.py  categorias.py  historico_table_model.py  ingredientes.py  ingredientes_list_model.py  itens_pedido_model.py  mock.py  pedidos_table_model.py  precos.py  produtos.py  (+4 more)
qt/styles/: login.qss  main.qss
qt/views/: main.ui  main_ui.py
qt/windows/: login.py  main.py
(+570 files in other folders)
