[tool.poetry]
name = "qt"
version = "0.1.0"
description = ""
authors = ["Antonio Fernando <antoniofernandodj@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyside6 = "^6.6.1"
httpx = "^0.26.0"
dynaconf = "^3.2.4"
pydantic = "^2.6.0"
bcrypt = "^4.1.2"
unidecode = "^1.3.8"
cx-freeze = "^6.15.14"
pyinstaller = "^6.3.0"
pandas = "^2.2.0"
pandas-stubs = "^2.1.4.231227"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
